--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
+  <h1>{% block title %}Registrar{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
   <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Register">
+    <label for="username">Nombre de usuario</label>
+    <input name="username" id="Usuario" required>
+    <label for="password">Contraseña</label>
+    <input type="password" name="password" id="Contraseña" required>
+    <input type="submit" value="Registrarse">
   </form>
 {% endblock %}
