--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -5,7 +5,7 @@
   <h1>Skyfall</h1>
   <ul>
     {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
+      <li><span>{{ g.user['username'] }} ({{ g.user['email'] }})</span>
       <li><a href="{{ url_for('auth.logout') }}">Salir</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Registrarse</a>
