--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -20,6 +20,8 @@
         {% endif %}
       </header>
       <p class="body">{{ post['body'] }}</p>
+      <button>Me gusta ❤️</button>
+      <button>No me gusta 💔</button>
     </article>
     {% if not loop.last %}
       <hr>
