--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -24,3 +24,13 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .content textarea { min-height: 12em; resize: vertical; }
 input.danger { color: #cc2f2e; }
 input[type=submit] { align-self: start; min-width: 10em; }
+.like-btn i { 
+    font-size: 40px; 
+    cursor: pointer; 
+    color: #4CAF50; 
+    transition: color 0.3s ease; 
+} 
+
+.like-btn.active i { 
+    color: #af4c4c; 
+} 
