--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -20,8 +20,27 @@
         {% endif %}
       </header>
       <p class="body">{{ post['body'] }}</p>
-      <button>Me gusta ❤️</button>
-      <button>No me gusta 💔</button>
+      <link rel="stylesheet" href= 
+      "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+      <div class="like-btn" onclick="toggleLike()"> 
+        <i class="fas fa-thumbs-up"></i> 
+      </div> 
+      <script> 
+        let likeBtn = document.querySelector('.like-btn'); 
+        function toggleLike() { 
+            likeBtn.classList.toggle('active'); 
+            // Toggle Font Awesome class for the  
+            // thumbs-up and thumbs-down icons 
+            if (likeBtn.classList.contains('active')) { 
+                likeBtn.innerHTML =  
+                    '<i class="fas fa-thumbs-down"></i>'; 
+            } else { 
+                likeBtn.innerHTML =  
+                    '<i class="fas fa-thumbs-up"></i>'; 
+            } 
+          } 
+          
+      </script>      
     </article>
     {% if not loop.last %}
       <hr>
